--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "billing-system",
+  "description": "Billing system for Sri Ganesh Pazhamudhir Nilayam",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "email": "surya.elash98@protonmail.com",
+    "name": "Surya Elavazhagan"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "electron": "^7.1.7",
-    "electron-is-dev": "^1.1.0",
-    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "react-svg": "^11.0.6",
-    "typescript": "~3.7.2"
+    "react-svg": "^11.0.6"
   },
   "scripts": {
     "start:web": "react-scripts start",
     "build:web": "react-scripts build",
     "start:app": "concurrently \"BROWSER=none yarn start:web\" \"wait-on http://localhost:3000 && yarn build:app && electron ./build/main.js\"",
-    "build:app": "tsc -p electron/tsconfig.json",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:app": "yarn build:web && electron-packager . billing-system --all",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,9 +38,22 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^2.10.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "concurrently": "^5.0.2",
     "electron-builder": "^21.2.0",
     "tslint": "^5.20.1",
-    "wait-on": "^3.3.0"
+    "wait-on": "^3.3.0",
+    "node-sass": "^4.13.0",
+    "electron-packager": "^14.2.0",
+    "typescript": "~3.7.2",
+    "cross-zip": "^3.0.0",
+    "electron": "^7.1.7",
+    "electron-is-dev": "^1.1.0"
   }
 }
